# axoupdater

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  publish-crates.yml  release.yml
axoupdater/: Cargo.toml
axoupdater-cli/: Cargo.toml
axoupdater-cli/tests/: integration.rs
axoupdater/src/: errors.rs  lib.rs  receipt.rs  staging_dir.rs
axoupdater/src/release/: github.rs  mod.rs
axoupdater/src/test/: helpers.rs  mod.rs
src/: lib.rs  main.rs
