[workspace]
members = ["axoupdater", "axoupdater-cli"]
resolver = "2"

[workspace.package]
version = "0.8.1"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/axodotdev/axoupdater"
repository = "https://github.com/axodotdev/axoupdater"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1-github-recross"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "aarch64-unknown-linux-musl", "aarch64-pc-windows-msvc", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "upload"
# Publish jobs to run in CI
publish-jobs = ["./publish-crates"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-gnu = "buildjet-8vcpu-ubuntu-2204-arm"
aarch64-unknown-linux-musl = "buildjet-8vcpu-ubuntu-2204-arm"

[workspace.metadata.dist.github-custom-runners.aarch64-pc-windows-msvc]
container = "messense/cargo-xwin"
