[workspace]
members = ["axoupdater", "axoupdater-cli"]
resolver = "2"

[workspace.package]
version = "0.9.1"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/axodotdev/axoupdater"
repository = "https://github.com/axodotdev/axoupdater"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
