[package]
name = "axoupdater-cli"
description = "Self-updater executable for use with cargo-dist"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
tls_native_roots = ["axoupdater/tls_native_roots"]

[dependencies]
axocli = "0.2.0"
axoupdater = { version = "=0.7.0", path = "../axoupdater", features = ["blocking"] }
clap = { version = "4.5.15", features = ["derive"] }

# errors
miette = "7.2.0"

[dev-dependencies]
axoasset = { version = "1.0.0", default-features = false, features = [
    "compression", "compression-tar", "compression-zip", "remote"
] }
axoprocess = "0.2.0"
camino = { version = "1.1.8", features = ["serde1"] }
tempfile = "3.12.0"
tokio = { version = "1.36.0", features = ["full"] }

[[bin]]
name = "axoupdater"

[package.metadata.dist]
features = ["tls_native_roots"]
