[package]
name = "axoupdater-cli"
description = "Self-updater executable for use with cargo-dist"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"

[dependencies]
axocli = "0.3.0"
axoupdater = { version = "=0.9.1", path = "../axoupdater", features = ["blocking"] }
clap = { version = "4.5.60", features = ["derive"] }

# errors
miette = "7.4.0"

[dev-dependencies]
axoasset = { version = "2.0.0", default-features = false, features = [
    "compression", "compression-tar", "compression-zip", "remote"
] }
axoprocess = "0.2.0"
camino = { version = "1.1.10", features = ["serde1"] }
tempfile = "3.25.0"
tokio = { version = "1.49.0", features = ["full"] }

[[bin]]
name = "axoupdater"
