[package]
name = "axoupdater"
description = "Self-updater library for use with cargo-dist"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["axo_releases", "github_releases"]
axo_releases = ["gazenot"]
blocking = ["tokio"]
github_releases = ["axoasset/remote"]
tls_native_roots = ["axoasset/tls-native-roots"]

[dependencies]
axoasset = { version = "1.3.0", default-features = false, features = ["json-serde"] }
axoprocess = "0.2.0"
axotag = { version = "0.3.0" }
camino = { version = "1.1.6", features = ["serde1"] }
homedir = "0.3.3"
serde = "1.0.197"
tempfile = "3.10.1"
url = "2.5.4"

# axo releases
gazenot = { version = "0.3.3", features = ["client_lib"], optional = true }

# blocking API
tokio = { version = "1.36.0", features = ["full"], optional = true }

# errors
miette = "7.2.0"
thiserror = "2.0.16"

[target.'cfg(windows)'.dependencies]
self-replace = "1.5.0"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["test-util"] }
httpmock = "0.7.0"
serial_test = "3.2.0"
